# weatherwise-azure-cloud-native-platform

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml  start.ps1  start.sh
.github/workflows/: ci.yml  deploy-dev.yml  deploy-prod.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/tests/: conftest.py  test_main.py
docs/: ARCHITECTURE.md  DECISIONS.md  RUNBOOK.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ErrorMessage.tsx  FavoritesList.tsx  Footer.tsx  ForecastList.tsx  HourlyChart.tsx  LoadingSpinner.tsx  Navbar.tsx  SearchBar.tsx  UnitToggle.tsx  WeatherCard.tsx
frontend/src/pages/: About.tsx  Favorites.tsx  Home.tsx  NotFound.tsx  Weather.tsx
frontend/src/services/: weatherApi.ts
frontend/src/store/: weatherStore.ts
frontend/src/types/: weather.ts
infra/: main.bicep
infra/modules/: container-apps.bicep  key-vault.bicep  log-analytics.bicep
infra/parameters/: dev.parameters.json  prod.parameters.json
scripts/: azure-setup.ps1  azure-teardown.ps1
